--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -51,18 +51,22 @@
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/switchOption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="46dp"
+        android:checked="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listTitle"
+        app:layout_constraintBottom_toTopOf="@+id/listItems"
         android:layout_marginTop="24dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listItems"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         tools:listitem="@layout/list_adapter"
         tools:itemCount="20"
         app:layout_constraintStart_toStartOf="parent"
